--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Your Title Here</title>
+  <title>Movie Search</title>
 </head>
 <body>
       <%= yield  %>
