Updated with three working pages, error page, basic bootstrap CSS.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Movie Search</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/style.css" media="screen">
+  <link rel="stylesheet" href="/stylesheets/small.css" media="screen and (max-width:600px)">
+  <link rel="stylesheet" href="/stylesheets/bootstrap.css">
 </head>
 <body>
       <%= yield  %>
