--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,16 @@
-<html>
-<head>
-	<title>Movie Search</title>
-	<link rel="stylesheet" href="stylesheets/style.css">
-</head>
-<body>
-	<h1>My Movie Search</h1>
-	<form action="/results" method="get">
-		<input type="search" placeholder="Movie title.." name="movie">
-		<input type="submit" value="search">
-	</form>
-</body>
-</html>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 title">
+			<h1>Movie Search</h1>
+		</div>
+		<div class="row">
+			<div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 movieForm">
+				<form action="/results" method="get" class="form">
+					<input type="search" placeholder="Movie title.." name="movie">
+					<input type="submit" value="search">
+			    </form>
+			</div>
+		</div>
+	</div>
+</div>
