--- a/views/search.erb
+++ b/views/search.erb
@@ -1,11 +1,14 @@
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	<h1>Movie List</h1>
-	<% for @movie in @result["Search"] %>
-	<br><a href=/poster/<%= @movie["imdbID"]%>> <%=@movie["Title"]%> - <%=@movie["Year"]%></a><br>
-	<% end %>
-</body>
-</html>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-4 col-md-4 col-xs-offset-4 col-md-offest-4 title">
+			<h1>Movie List</h1>
+		</div>
+		<div class="row">
+			<div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 searchResults">
+				<% for @movie in @result["Search"] %>
+				<br><a href=/poster/<%= @movie["imdbID"]%>> <%=@movie["Title"]%> - <%=@movie["Year"]%></a><br>
+				<% end %>
+			</div>
+		</div>
+	</div>
+</div>
