near final version w/o working media queries, but is mobile first.

--- a/views/error.erb
+++ b/views/error.erb
@@ -1,3 +1,11 @@
 <body>
-	
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-md-12 errorMessage">
+				<h3>Technical difficulties...</h3>
+				<h4>Click the back button or visit our refeshment center.</h4>
+				<img src="../images/imgres.jpg">
+			</div>
+		</div>
+	</div>
 </body>
