--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,5 +9,12 @@
 </head>
 <body>
       <%= yield  %>
+      <div class="container">
+      	<div class="row">
+      		<div class="col-xs-12 col-md-12 backgroundImage">
+      			<img src="../images/movie_search_index_1.svg"></img>
+      		</div>
+      	</div>
+      </div>
 </body>
 </html>
