--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 html {
-	background-image: url(../images/movie_search_index_3.svg);
+	background-color: white;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -8,6 +8,10 @@ body {
 	font: 18px/1.5em "helvetica neue", sans-serif;
 	margin-left: 0px;
 	margin-right: 0px;
+}
+
+.backgroundImage {
+	text-align: center;
 }
 
 .title {
@@ -22,7 +26,7 @@ body {
 }
 
 .form {
-	padding: 75px 25%;
+	padding: 75px 20%;
 }
 
 input {
@@ -46,6 +50,10 @@ ul {
 
 li:first-child {
 	font-weight: bold;
+}
+
+.errorMessage {
+	text-align: center;
 }
 
 
