--- a/views/index.erb
+++ b/views/index.erb
@@ -2,10 +2,10 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 title">
-			<h1>Movie Search</h1>
+			<h1>Select Movie</h1>
 		</div>
 		<div class="row">
-			<div class="col-xs-6 col-xs-offset-3 col-md-6 col-md-offset-3 movieForm">
+			<div class="col-xs-4 col-xs-offset-4 col-md-4 col-md-offset-4 movieForm">
 				<form action="/results" method="get" class="form">
 					<input type="search" placeholder="Movie title.." name="movie">
 					<input type="submit" value="search">
