--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .form {
-	padding: 75px 20%;
+	padding: 75px 10%;
 }
 
 input {
@@ -43,10 +43,25 @@ input {
 	background: lightgray;
 }
 
+
+	
+	/*-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	transition: all 600ms ease;
+	-webkit-transform-origin: 50% 50%;
+	-moz-transform-origin: 50% 50%;
+	-ms-transform-origin: 50% 50%;
+	-o-transform-origin: 50% 50%;
+	transform-origin: 50% 50%;*/
+
+
 ul {
 	list-style: none;
 	text-align: center;
 }
+
 
 li:first-child {
 	font-weight: bold;
@@ -56,29 +71,3 @@ li:first-child {
 	text-align: center;
 }
 
-
-/*input[type="submit"] {
-	border-radius: 6px;
-	background-color: salmon;
-	border: 2px solid pink;
-}*/
-
-/*input[type="submit"] {
-	background-color: rgb(241,169,136);
-	border-radius: 6px;
-	border: 2px solid rgb(194,179,170);
-	background: linear-gradient(#E6C3A9, #CC976D);
-	padding: 10px 20px;
-	font-size: 14px;
-	width: 120px;
-	float: right;
-}
-input[type="text"] {
-	padding: 10px 20px;
-	border: 2px solid rgb(194,179,170);
-	font-size: 14px;
-	height: 45px;
-	margin: 0;
-	border-radius: 6px;
-	width: 250px;
-	transition: width 500ms;*/
