added hover to movie list.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,10 @@ input {
 	background: lightgray;
 }
 
+.searchResults a:hover {
+	font-size: 20px;
+}
+
 
 	
 	/*-webkit-transition: all 600ms ease;
